🎶Shut the fuck up, you're a fucking MongoDB Logger ~PINK GUY Adaptation
